--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <script type="application/ld+json">
 
     {  
-      "@context":"http://schema.org",
+      <!-- "@context":"http://schema.org", -->
+      "@context":"https://schema.org",
       "@type":"Website",
       "@id":"https:\/\/valino123.github.io",
       "author": {
